--- a/app/blocks/form-panel/form-panel.scss
+++ b/app/blocks/form-panel/form-panel.scss
@@ -31,6 +31,12 @@
         line-height: (26 / 12);
       }
     }
+
+    &_back_v2 {
+      @include screen('sm') {
+        padding-left: 25px;
+      }
+    }
   }
 
   &__links {
