--- a/app/components/popup-payment-summary/popup-payment-summary.scss
+++ b/app/components/popup-payment-summary/popup-payment-summary.scss
@@ -19,6 +19,14 @@
     @include screen('sm') {
       padding: 14px 10px;
     }
+
+    .is-choices-dropdown-showed & {
+      @include screen('sm') {
+        visibility: hidden;
+        touch-action: none;
+        pointer-events: none;
+      }
+    }
   }
 
   .popup {
