--- a/app/pages/sitemap/sitemap.scss
+++ b/app/pages/sitemap/sitemap.scss
@@ -14,7 +14,7 @@
       width: 100%;
 
       &:not(:last-child) {
-        margin-bottom: 10px;
+        margin-bottom: 20px;
       }
     }
   }
